# clock-bound

./: CONTRIBUTING.md  Cargo.toml  PROTOCOL.md  README.md
clock-bound-c/: CHANGELOG.md  Cargo.toml  NOTICE  README.md  README.tpl
clock-bound-c/examples/: after.rs  before.rs  now.rs  timing.rs
clock-bound-c/src/: error.rs  lib.rs
clock-bound-client/: CHANGELOG.md  Cargo.toml  NOTICE  README.md  README.tpl
clock-bound-client/src/: lib.rs
clock-bound-d/: CHANGELOG.md  Cargo.toml  README.md  README.tpl
clock-bound-d/src/: ceb.rs  channels.rs  chrony_client.rs  chrony_poller.rs  clock_bound_runner.rs  clock_snapshot_poller.rs  clock_state_fsm.rs  clock_state_fsm_no_disruption.rs  lib.rs  main.rs  phc_utils.rs  response.rs  server.rs  shm_writer.rs  signal.rs  socket.rs  thread_manager.rs  tracking.rs
clock-bound-d/src/clock_snapshot_poller/: chronyd_snapshot_poller.rs
clock-bound-d/src/shm_writer/: clock_state_fsm.rs
clock-bound-ffi/: Cargo.toml  NOTICE  README.md  README.tpl
clock-bound-ffi/include/: clockbound.h
clock-bound-ffi/src/: lib.rs
clock-bound-shm/: Cargo.toml  NOTICE  README.md
clock-bound-shm/src/: common.rs  lib.rs  reader.rs  shm_header.rs  writer.rs
clock-bound-vmclock/: Cargo.toml  NOTICE  README.md
clock-bound-vmclock/src/: lib.rs  shm.rs  shm_reader.rs  shm_writer.rs
docs/: PROTOCOL.md
examples/c/: README.md
examples/c/src/: clockbound_now.c
examples/client/c/: README.md
examples/client/c/src/: clockbound_loop_forever.c  clockbound_now.c
examples/client/rust/: Cargo.toml  README.md
examples/client/rust/src/: main.rs
examples/rust/: Cargo.toml  README.md
examples/rust/src/: main.rs
test/: README.md
test/clock-bound-vmclock-client-test/: Cargo.toml  README.md
test/clock-bound-vmclock-client-test/src/: main.rs
test/vmclock-updater/: Cargo.toml  README.md
test/vmclock-updater/src/: main.rs
