[package]
name = "clock-bound-c"
version = "0.1.0"
authors = ["Jacob Wisniewski <wisnjaco@amazon.com>"]
description = "A client library to communicate with ClockBoundD."
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/aws/clock-bound"
keywords = ["aws", "ntp", "ec2", "time"]
categories = [ "date-and-time" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
chrono = "0.4.19"
thiserror = "1"
rand = "0.8.4"