[package]
name = "clock-bound-client"
version = "1.0.0"
authors = [
  "Julien Ridoux <ridouxj@amazon.com>",
  "Jacob Wisniewski <wisnjaco@amazon.com>",
  "Tam Phan <tmpha@amazon.com>",
  "Ryan Luu <rluu@amazon.com>",
  "Wenhao Piao <wenhaopi@amazon.com>"
]
description = "A Rust library to communicate with ClockBound daemon."
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/aws/clock-bound"
keywords = ["aws", "ntp", "ec2", "time"]
categories = [ "date-and-time" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clock-bound-shm = { version = "1.0.0", path = "../clock-bound-shm" }
errno = { version = "=0.3.0", default-features = false }
nix = { version = "0.26", features = ["feature", "time"] }

[dev-dependencies]
byteorder = "1"
