[package]
name = "clock-bound-client"
description = "A Rust library to communicate with ClockBound daemon."
license = "Apache-2.0"
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
keywords.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
clock-bound-shm = { version = "2.0", path = "../clock-bound-shm" }
clock-bound-vmclock = { version = "2.0", path = "../clock-bound-vmclock" }
errno = { version = "0.3.0", default-features = false }
nix = { version = "0.26", features = ["feature", "time"] }

[dev-dependencies]
byteorder = "1"
libc = { version = "0.2", default-features = false, features = ["extra_traits"] }
tempfile = { version = "3.13" }
