[package]
name = "clock-bound-d"
version = "0.1.1"
authors = ["Jacob Wisniewski <wisnjaco@amazon.com>"]
description = "A daemon to provide clients with an error bounded timestamp interval."
edition = "2021"
license = "GPL-2.0-only"
readme = "README.md"
repository = "https://github.com/aws/clock-bound"
keywords = ["aws", "ntp", "ec2", "time"]
categories = [ "date-and-time" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrony-candm = "0.1"
log = "0.4.14"
syslog = "5"
clap = "2.33"
tokio = { version = "1.12", features = ["sync"] }
chrono = "0.4.19"
byteorder = "1.4.3"
uds = "0.2.6"

[[bin]]
name = "clockboundd"
path = "src/main.rs"
doc = false

[badges]
github = { repository = "aws/clock-bound-d"}
