[package]
name = "clock-bound-ffi"
version = "1.0.0"
authors = [
  "Julien Ridoux <ridouxj@amazon.com>",
  "Jacob Wisniewski <wisnjaco@amazon.com>",
  "Tam Phan <tmpha@amazon.com>",
  "Ryan Luu <rluu@amazon.com>",
  "Wenhao Piao <wenhaopi@amazon.com>"
]
description = "A C client library used to interact with ClockBound daemon."
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/aws/clock-bound"
keywords = ["aws", "ntp", "ec2", "time"]
categories = [ "date-and-time" ]

[lib]
# Produces libclockbound.a, libclockbound.so
crate-type = ["cdylib", "staticlib"]
name = "clockbound"
path = "src/lib.rs"

[dependencies]
clock-bound-shm = { version = "1.0.0", path = "../clock-bound-shm" }
errno = { version = "=0.3.0", default-features = false }
libc = { version = "0.2", default-features = false }

[dev-dependencies]
byteorder = "1"
