[package]
name = "clock-bound-ffi"
description = "A C client library used to interact with ClockBound daemon."
license = "Apache-2.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
keywords.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[lib]
# Produces libclockbound.a, libclockbound.so
crate-type = ["cdylib", "staticlib"]
name = "clockbound"

[dependencies]
clock-bound-shm = { version = "2.0", path = "../clock-bound-shm" }
clock-bound-vmclock = { version = "2.0", path = "../clock-bound-vmclock" }
errno = { version = "0.3.0", default-features = false }
libc = { version = "0.2", default-features = false }
nix = { version = "0.26", features = ["feature", "time"] }

[dev-dependencies]
byteorder = "1"
tempfile = { version = "3.13" }
