[package]
name = "clock-bound-shm"
description = "A library used to interact with shared memory in ClockBound."
license = "Apache-2.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
keywords.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[features]
writer = []

[dependencies]
byteorder = "1"
errno = { version = "0.3.0", default-features = false }
libc = { version = "0.2", default-features = false, features = ["extra_traits"] }
nix = { version = "0.26", features = ["feature", "time"] }

[dev-dependencies]
tempfile = { version = "3.13" }
