[package]
name = "clock-bound-vmclock"
description = "A library used to interact with VMClock shared memory in ClockBound."
license = "Apache-2.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
keywords.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[features]
writer = []

[dependencies]
clock-bound-shm = { version = "2.0", path = "../clock-bound-shm" }
byteorder = "1"
errno = { version = "0.3.0", default-features = false }
libc = { version = "0.2", default-features = false, features = ["extra_traits"] }
nix = { version = "0.26", features = ["feature", "time"] }
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_info"]}
tracing-subscriber = { version = "0.3", features = ["std", "fmt", "json"] }

[dev-dependencies]
tempfile = { version = "3.13" }
