[package]
name = "clockbound-client-rust-example"
version = "1.0.0"
authors = [
  "Ryan Luu <rluu@amazon.com>",
]
description = "A Rust example program that communicates with ClockBound daemon."
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/aws/clock-bound"
keywords = ["aws", "ntp", "ec2", "time"]
categories = [ "date-and-time" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.26", features = ["feature", "time"] }
clock-bound-client = { version = "1.0.0", path = "../../clock-bound-client" }

[dev-dependencies]
byteorder = "1"
errno = { version = "=0.3.0", default-features = false }
