[package]
name = "clock-bound-vmclock-client-test"
description = "A Rust test program of the ClockBound client communicating with the ClockBound daemon and VMClock."
license = "Apache-2.0"
publish = false

authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
keywords.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "clock-bound-vmclock-client-test"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clock-bound-client = { version = "2.0", path = "../../clock-bound-client" }
nix = { version = "0.26", features = ["feature", "time"] }

[dev-dependencies]
byteorder = "1"
errno = { version = "0.3.0", default-features = false }
nix = { version = "0.26", features = ["feature", "time"] }
